# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  13 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/busy-config:
  Enable support klogd and syslogd for netboot

  13 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc,
  gen_cmdline.sh, gen_determineargs.sh, gen_initramfs.sh:
  Add --real-root=<foo> parameter to specify a default for real_root= in the
  initramfs for gentoo bug #249783

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> -arch/alpha/busy-config,
  -arch/arm/busy-config, -arch/ia64/busy-config, -arch/mips/busy-config,
  -arch/parisc/busy-config, -arch/parisc64/busy-config,
  -arch/ppc/busy-config, -arch/ppc64/busy-config, -arch/sparc/busy-config,
  -arch/sparc64/busy-config, -arch/x86/busy-config,
  -arch/x86_64/busy-config, gen_compile.sh:
  Switch search order so arch-specific is first for busy-config Remove
  unneeded identical busy-config files

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
  genkernel.conf:
  Remove BUSYBOX_CONFIG from genkernel.conf Add search order for
  busy-config: user-specified, defaults/busy-config,
  arch/%%ARCH%%/busy-config

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> -arch/x86/nb-busybox.cf,
  -defaults/nb-busybox.cf:
  Remove old nb-busybox.cf files that aren't used anymore

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> +arch/arm/busy-config,
  +arch/arm/config.sh, +arch/arm/modules_load:
  Add support for arm from armin76

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/um/busy-config,
  arch/x86/busy-config, arch/x86_64/busy-config, defaults/busy-config:
  Enable CONFIG_MAKEDEVS in busy-config for netboot
