@@ -196,7 +196,7 @@ mount_sysfs() {
 }
 
 findnfsmount() {
-	if [ "${IP}" != '' ] || busybox udhcpc -n -T 15 -q -s /bin/udhcpc.scripts
+	if [ "${IP}" != '' ] || busybox udhcpc -n -T 15 -q
 	then
 		[ -e /rootpath ] && NFSROOT=`cat /rootpath`
 
